# alienscan

./: .eslintrc.json  .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  MARKETING.md  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
data/sample/: sightings_sample.csv
docs/: ARCHITECTURE.md  DATA.md  DEPLOY.md
pipeline/: pyproject.toml
pipeline/alienscan_pipeline/: __init__.py  build.py  clean.py  duration.py  schema.py
pipeline/tests/: test_clean.py  test_duration.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/map/: page.tsx
src/app/scan/: page.tsx
src/app/stats/: page.tsx
src/components/: bar-chart.tsx  filter-bar.tsx  footer.tsx  nav.tsx  sightings-map.tsx  stat-card.tsx  year-trend.tsx
src/lib/: duckdb.ts  geocode.ts  queries.ts  use-filters.ts  utils.ts
src/types/: sighting.ts
tests/: queries.test.ts  use-filters.test.ts  utils.test.ts
