[project]
name = "alienscan-pipeline"
version = "0.1.0"
description = "Data pipeline that builds the AlienScan sightings Parquet"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.13.0",
    "duckdb>=1.1.3",
    "httpx>=0.27.2",
    "pyarrow>=18.0.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alienscan_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["N812"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
